chore: add `shadcn/ui`

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,14 @@
 ---
+import {
+  Card,
+  CardContent,
+  CardDescription,
+  CardFooter,
+  CardHeader,
+  CardTitle,
+} from "@/components/ui/card";
 
+import "@/styles/globals.css";
 ---
 
 <html lang="en">
@@ -12,5 +21,17 @@
   </head>
   <body>
     <h1 class="mx-auto bg-white p-5 text-red-500 hover:text-red-700">Astro</h1>
+    <Card>
+      <CardHeader>
+        <CardTitle>Card Title</CardTitle>
+        <CardDescription>Card Description</CardDescription>
+      </CardHeader>
+      <CardContent>
+        <p>Card Content</p>
+      </CardContent>
+      <CardFooter>
+        <p>Card Footer</p>
+      </CardFooter>
+    </Card>
   </body>
 </html>
