--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,16 @@
 ---
-import {
-  Card,
-  CardContent,
-  CardDescription,
-  CardFooter,
-  CardHeader,
-  CardTitle,
-} from "@/components/ui/card";
+import Layout from "@/layouts/Layout.astro";
+import Converter from "@/components/Converter.astro";
+import ExchangeRates from "@/components/ExchangeRates.astro";
 
 import "@/styles/globals.css";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1 class="mx-auto bg-white p-5 text-red-500 hover:text-red-700">Astro</h1>
-    <Card>
-      <CardHeader>
-        <CardTitle>Card Title</CardTitle>
-        <CardDescription>Card Description</CardDescription>
-      </CardHeader>
-      <CardContent>
-        <p>Card Content</p>
-      </CardContent>
-      <CardFooter>
-        <p>Card Footer</p>
-      </CardFooter>
-    </Card>
-  </body>
-</html>
+<Layout>
+  <main class="min-h-[calc(100dvh-152px)]">
+    <section class="grid gap-4 lg:grid-cols-2">
+      <Converter />
+      <ExchangeRates />
+    </section>
+  </main>
+</Layout>
