--- a/src/components/ExchangeRates.astro
+++ b/src/components/ExchangeRates.astro
@@ -7,6 +7,7 @@ import {
   CardHeader,
   CardTitle,
 } from "@/components/ui/card";
+import { Chart } from "@/components/Chart";
 ---
 
 <Card>
@@ -15,9 +16,9 @@ import {
     <CardDescription>Latest exchange rates.</CardDescription>
   </CardHeader>
   <CardContent>
-    <p>Card Content</p>
+    <Chart client:visible />
   </CardContent>
   <CardFooter>
-    <p>Card Footer</p>
+    <p class="text-xs">Card Footer</p>
   </CardFooter>
 </Card>
