--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import "@/styles/globals.css";
 
 <Layout>
   <main class="min-h-[calc(100dvh-152px)]">
-    <section class="grid gap-4 lg:grid-cols-2">
+    <section class="grid gap-4">
       <Converter />
       <ExchangeRates />
     </section>
