fix: id of latest element

--- a/src/components/Converter.astro
+++ b/src/components/Converter.astro
@@ -53,7 +53,7 @@ const data = (await response.json()) as Latest;
 <script>
   import invariant from "tiny-invariant";
 
-  const latestElement = document.getElementById("latestasdsdsd");
+  const latestElement = document.getElementById("latest");
   invariant(latestElement, "Latest element not found");
   invariant(latestElement.dataset.latest, "No latest data found");
 
