--- a/src/components/Converter.astro
+++ b/src/components/Converter.astro
@@ -9,6 +9,7 @@ import {
 } from "@/components/ui/card";
 import { Input } from "@/components/ui/input";
 import { Label } from "@/components/ui/label";
+import { CurrencySelect } from "./CurrencySelect";
 
 interface Latest {
   base: string;
@@ -17,7 +18,7 @@ interface Latest {
 }
 
 const response = await fetch(
-  `https://api.currencybeacon.com/v1/latest?api_key=${import.meta.env.API_KEY}&symbols=COP`
+  `https://api.currencybeacon.com/v1/latest?api_key=${import.meta.env.PUBLIC_API_KEY}&symbols=COP`
 );
 
 const data = (await response.json()) as Latest;
@@ -32,16 +33,22 @@ const data = (await response.json()) as Latest;
     <div class="grid gap-y-4">
       <div class="grid w-full items-center gap-1.5">
         <Label htmlFor="amount">Amount</Label>
-        <Input type="number" id="amount" min="0" defaultValue={1} />
+        <div class="flex flex-col gap-2 sm:flex-row">
+          <Input type="number" id="amount" min="0" defaultValue={1} />
+          <CurrencySelect client:load />
+        </div>
       </div>
       <div class="grid w-full items-center gap-1.5">
         <Label htmlFor="convertedTo">Converted to</Label>
-        <Input
-          type="number"
-          id="convertedTo"
-          min="0"
-          defaultValue={data.rates["COP"].toFixed(1)}
-        />
+        <div class="flex flex-col gap-2 sm:flex-row">
+          <Input
+            type="number"
+            id="convertedTo"
+            min="0"
+            defaultValue={data.rates["COP"].toFixed(1)}
+          />
+          <CurrencySelect client:load />
+        </div>
       </div>
     </div>
   </CardContent>
