--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,5 +84,10 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
   }
 }
