--- a/src/components/ExchangeRates.astro
+++ b/src/components/ExchangeRates.astro
@@ -1,5 +1,7 @@
 ---
-import dayjs from "dayjs";
+import { BASE_URL, START_DATE, END_DATE } from "@/scripts/api";
+
+import { getHistorical } from "@/lib/utils";
 
 import {
   Card,
@@ -11,23 +13,15 @@ import {
 } from "@/components/ui/card";
 import { Chart } from "@/components/Chart";
 
-import type { HistoricalResponse, Historical } from "@/types";
-
-const startDate = dayjs().subtract(1, "M").format("YYYY-MM-DD");
-const endDate = dayjs().format("YYYY-MM-DD");
+import type { HistoricalResponse } from "@/types";
 
 const response = await fetch(
-  `https://api.currencybeacon.com/v1/timeseries?api_key=${import.meta.env.PUBLIC_API_KEY}&symbols=COP&start_date=${startDate}&end_date=${endDate}`
+  `${BASE_URL}/timeseries?api_key=${import.meta.env.PUBLIC_API_KEY}&symbols=COP&start_date=${START_DATE}&end_date=${END_DATE}`
 );
 
 const data = (await response.json()) as HistoricalResponse;
 
-const historical: Historical = Object.entries(data.response).map(
-  ([date, { COP }]) => ({
-    date: dayjs(date).format("MMM D"),
-    rate: COP.toFixed(2),
-  })
-);
+const historical = getHistorical(data.response, "COP");
 ---
 
 <Card>
