--- a/src/components/Converter.astro
+++ b/src/components/Converter.astro
@@ -1,4 +1,6 @@
 ---
+import { ArrowRightLeft } from "lucide-react";
+
 import { BASE_URL } from "@/scripts/api";
 
 import {
@@ -45,9 +47,9 @@ const currencies = (await currenciesResponse.json()) as CurrenciesResponse;
   <CardContent id="converter" data-data={JSON.stringify(converter)}>
     <div class="grid gap-y-4">
       <div class="grid w-full items-center gap-1.5">
-        <Label htmlFor="amount">Amount</Label>
-        <div class="flex flex-col gap-2 sm:flex-row">
-          <Input type="number" id="amount" min="0" />
+        <Label htmlFor="from">From</Label>
+        <div class="xs:flex-row flex flex-col gap-2">
+          <Input type="number" id="from" min="0" />
           <CurrencySelect
             id="base"
             currencies={currencies.response}
@@ -56,9 +58,9 @@ const currencies = (await currenciesResponse.json()) as CurrenciesResponse;
         </div>
       </div>
       <div class="grid w-full items-center gap-1.5">
-        <Label htmlFor="converted_to">Converted to</Label>
-        <div class="flex flex-col gap-2 sm:flex-row">
-          <Input type="number" id="converted_to" min="0" />
+        <Label htmlFor="to">To</Label>
+        <div class="xs:flex-row flex flex-col gap-2">
+          <Input type="number" id="to" min="0" />
           <CurrencySelect
             id="symbol"
             currencies={currencies.response}
@@ -68,9 +70,9 @@ const currencies = (await currenciesResponse.json()) as CurrenciesResponse;
       </div>
     </div>
   </CardContent>
-  <CardFooter className="grid text-xs">
+  <CardFooter className="gap-x-1 text-xs text-muted-foreground">
+    <ArrowRightLeft size={16} />
     <span id="exchange_rate"></span>
-    <span id="updated_date"></span>
   </CardFooter>
 </Card>
 
