--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Container from "@/components/Cointainer.astro";
 import Header from "@/components/Header.astro";
+import Hero from "@/components/Hero.astro";
 import Footer from "@/components/Footer.astro";
 ---
 
@@ -17,10 +18,28 @@ import Footer from "@/components/Footer.astro";
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
+    <script is:inline>
+      const getThemePreference = () => {
+        if (
+          typeof localStorage !== "undefined" &&
+          localStorage.getItem("theme")
+        ) {
+          return localStorage.getItem("theme");
+        }
+
+        return window.matchMedia("(prefers-color-scheme: dark)").matches
+          ? "dark"
+          : "light";
+      };
+
+      const isDark = getThemePreference() === "dark";
+      document.documentElement.classList[isDark ? "add" : "remove"]("dark");
+    </script>
   </head>
-  <body class="dark">
+  <body>
     <Container>
       <Header />
+      <Hero />
       <slot />
       <Footer />
     </Container>
