fix: calc new page height

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { ThemeToggle } from "@/components/ThemeToggle";
 import { ThemeButton } from "@/components/ThemeButton";
 ---
 
-<header class="relative flex justify-end py-3">
+<header class="relative pt-16">
   <ThemeToggle client:load />
   <ThemeButton id="view_transition_button" />
 </header>
