--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Converter from "@/components/Converter.astro";
 import ExchangeRates from "@/components/ExchangeRates.astro";
 
 import "@/styles/globals.css";
+import "/node_modules/flag-icons/css/flag-icons.min.css";
 ---
 
 <Layout>
