--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,6 +82,7 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
     font-family: "Open Sans", sans-serif;
@@ -89,5 +90,9 @@
     font-weight: 400;
     font-style: normal;
     font-variation-settings: "wdth" 100;
+  }
+
+  .flag-globe {
+    background-image: url("/globe.svg");
   }
 }
