feat: show error messages if any SSR component fail to fetch data

--- a/src/components/Converter.astro
+++ b/src/components/Converter.astro
@@ -2,7 +2,6 @@
 import { ArrowRightLeft } from "lucide-react";
 
 import { GET } from "@/pages/api/currencies";
-import { isBadRequest } from "@/lib/utils";
 
 import {
   Card,
@@ -16,6 +15,7 @@ import { Input } from "@/components/ui/input";
 import { Label } from "@/components/ui/label";
 import { Skeleton } from "@/components//ui/skeleton";
 import { CurrencySelect } from "./CurrencySelect";
+import ErrorMessage from "./ErrorMessage.astro";
 
 import type { Converter, Currencies, BadRequest } from "@/types/app";
 
@@ -26,54 +26,68 @@ const defaultRates = (await defaultRatesResponse.json()) as
   | Converter
   | BadRequest;
 
-if (isBadRequest(defaultRates)) {
-  throw new Error(defaultRates.error);
-}
-
 const currenciesResponse = await GET(Astro);
 const currencies = (await currenciesResponse.json()) as Currencies | BadRequest;
-
-if (isBadRequest(currencies)) {
-  throw new Error(currencies.error);
-}
 ---
 
 <Card>
   <CardHeader>
     <CardTitle>Converter</CardTitle>
-    <CardDescription>Convert between currencies.</CardDescription>
+    {
+      !("error" in defaultRates) && (
+        <CardDescription>Convert between currencies.</CardDescription>
+      )
+    }
   </CardHeader>
   <CardContent id="converter" data-data={JSON.stringify(defaultRates)}>
-    <div class="grid gap-y-4">
-      <div class="grid w-full items-center gap-1.5">
-        <Label htmlFor="from">From</Label>
-        <div class="flex flex-col gap-2 xs:flex-row">
-          <Input type="number" id="from" min="0" />
-          <CurrencySelect
-            id="base"
-            currencies={currencies}
-            client:only="react"
-          />
+    {
+      "error" in defaultRates ? (
+        <ErrorMessage>{defaultRates.error}</ErrorMessage>
+      ) : (
+        <div class="grid gap-y-4">
+          <div class="grid w-full items-center gap-1.5">
+            <Label htmlFor="from">From</Label>
+            <div class="flex flex-col gap-2 xs:flex-row">
+              <Input type="number" id="from" min="0" />
+              {"error" in currencies ? (
+                <ErrorMessage>{currencies.error}</ErrorMessage>
+              ) : (
+                <CurrencySelect
+                  id="base"
+                  currencies={currencies}
+                  client:only="react"
+                />
+              )}
+            </div>
+          </div>
+          <div class="grid w-full items-center gap-1.5">
+            <Label htmlFor="to">To</Label>
+            <div class="flex flex-col gap-2 xs:flex-row">
+              <Input type="number" id="to" min="0" />
+              {"error" in currencies ? (
+                <ErrorMessage>{currencies.error}</ErrorMessage>
+              ) : (
+                <CurrencySelect
+                  id="symbol"
+                  currencies={currencies}
+                  client:only="react"
+                />
+              )}
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="grid w-full items-center gap-1.5">
-        <Label htmlFor="to">To</Label>
-        <div class="flex flex-col gap-2 xs:flex-row">
-          <Input type="number" id="to" min="0" />
-          <CurrencySelect
-            id="symbol"
-            currencies={currencies}
-            client:only="react"
-          />
-        </div>
-      </div>
-    </div>
+      )
+    }
   </CardContent>
-  <CardFooter className="gap-x-1 text-xs text-muted-foreground">
-    <ArrowRightLeft size={16} />
-    <span id="exchange_rate"></span>
-    <Skeleton id="exchange_rate_loader" className="hidden h-4 w-40" />
-  </CardFooter>
+  {
+    !("error" in defaultRates) && (
+      <CardFooter className="gap-x-1 text-xs text-muted-foreground">
+        <ArrowRightLeft size={16} />
+        <span id="exchange_rate" />
+        <Skeleton id="exchange_rate_loader" className="hidden h-4 w-40" />
+      </CardFooter>
+    )
+  }
 </Card>
 
 <script src="../scripts/converter.ts"></script>
