feat: add new background and update hero layout

--- a/src/components/ExchangeRates.astro
+++ b/src/components/ExchangeRates.astro
@@ -10,7 +10,7 @@ import {
   CardTitle,
 } from "@/components/ui/card";
 import { HistoricalChart } from "@/components/HistoricalChart";
-import { Skeleton } from "@/components//ui/skeleton";
+import { Skeleton } from "@/components/ui/skeleton";
 import ErrorMessage from "./ErrorMessage.astro";
 
 import type { RawHistorical, BadRequest } from "@/types/app";
