--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,18 @@
-<section class="space-y-1 py-9">
-  <h1 class="text-2xl font-semibold leading-none tracking-tight">Coinverter</h1>
-  <p class="text-sm text-muted-foreground">
-    Welcome to Coinverter. Convert between currencies and stay updated with the
-    latest exchange rates. Start converting now!
-  </p>
+---
+import GitHubButton from "./GitHubButton.astro";
+---
+
+<section
+  class="py-10 text-center duration-500 animate-in fade-in-0 slide-in-from-bottom-10"
+>
+  <GitHubButton />
+  <div class="space-y-1">
+    <h1 class="text-3xl font-bold md:text-4xl lg:text-6xl lg:leading-snug">
+      Coinverter
+    </h1>
+    <p class="text-sm text-muted-foreground lg:text-base">
+      Convert between currencies and stay updated with the latest exchange
+      rates.
+    </p>
+  </div>
 </section>
