feat: add animation to footer/theme toogle and update some mobile styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,9 @@ import "/node_modules/flag-icons/css/flag-icons.min.css";
 ---
 
 <Layout>
-  <main class="min-h-[calc(100dvh-240px)]">
+  <main
+    class="min-h-[calc(100dvh-315px)] md:min-h-[calc(100dvh-300px)] lg:min-h-[calc(100dvh-342.5px)]"
+  >
     <section class="grid gap-4">
       <Converter />
       <ExchangeRates />
