feat: add animation to select triggers and update footer text color

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer
-  class="mb-1 mt-8 text-center text-[10px] duration-500 animate-in fade-in-0 slide-in-from-top-4 md:text-xs"
+  class="mb-1 mt-8 text-center text-[10px] text-muted-foreground duration-500 animate-in fade-in-0 slide-in-from-top-4 md:text-xs"
 >
   Made with 💜 by <a
     href="https://x.com/sneyderdev"
